# mclf

./: .coveragerc  .gitignore  Dockerfile  README.md  _doctest_environment.py  age: K_v.extensions(phi)  asv.conf.json  example.ipynb  factor_polynomial_over_function_field.rst  pyproject.toml  readthedocs.yml  release.sh  setup.py  tox.ini
.circleci/: config.yml
.circleci/sage-asv/: sage_asv.py  setup.py
.github/workflows/: publish.yml  test.yml
docs/: .gitignore  Makefile  admissible_reduction.rst  affinoid_domain.rst  berkovich.rst  berkovich_line.rst  berkovich_trees.rst  conf.py  curves.rst  discrete_valuations.rst  discrete_valuations_on_function_fields.rst  embeddings_of_standard_fields.rst  environment.yml  extensions_of_discrete_valuations.rst  fake_padic_completions.rst  fake_padic_embeddings.rst  fake_padic_extensions.rst  fields.rst  finite_field_extensions.rst  gcds_of_polynomials_over_function_fields.rst  index.rst  morphisms_of_smooth_projective_curves  morphisms_of_smooth_projective_curves.rst  padic_extensions.rst  padic_valuations_on_function_fields.rst  piecewise_affine_functions.rst  readthedocs.yml  reduction_trees.rst  semistable_models.rst  semistable_reduction.rst  smooth_projective_curves.rst  standard_fields.rst  standard_function_fields.rst  standard_subfields.rst  superell.rst  superelliptic_curves.rst  superp.rst  superp_models.rst  type_V_points.rst  valuations.rst  (+2 more)
docs/_build/doctrees/: affinoid_domain.doctree  berkovich.doctree  berkovich_line.doctree  berkovich_trees.doctree  curves.doctree  environment.pickle  index.doctree  morphisms_of_smooth_projective_curves.doctree  reduction_trees.doctree  semistable_reduction.doctree  smooth_projective_curves.doctree  superp.doctree  type_V_points.doctree
docs/_build/html/: .buildinfo  affinoid_domain.html  berkovich.html  berkovich_line.html  berkovich_trees.html  curves.html  genindex.html  index.html  objects.inv  py-modindex.html  reduction_trees.html  search.html  searchindex.js  semistable_reduction.html  smooth_projective_curves.html  superp.html  type_V_points.html
docs/_build/html/_sources/: berkovich.txt  berkovich_line.txt  berkovich_trees.txt  curves.txt  index.txt  superp.txt
docs/_build/latex/: MCLF.aux  MCLF.idx  MCLF.ilg  MCLF.ind  MCLF.out  MCLF.tex  MCLF.toc  Makefile
mclf/: 2018-01-07-164705.term  README.md  TODO  __init__.py  __init__.py~  monkey.py
mclf/benchmarks/: README.md  semistable.py
mclf/berkovich/: 2017-06-07-002731.sagews  affinoid_domain.py  affinoid_domain.py~  berkovich_curves.py  berkovich_line.py  berkovich_line.py~  berkovich_path.py  berkovich_path_old.py  berkovich_summary.md  berkovich_trees.py  berkovich_trees.py~  junk  piecewise_affine_function.py  piecewise_affine_function.sage  piecewise_affine_functions.py  test.sage  test.sage~  test_affinoid_domain.sage  test_berkovich.sage  test_berkovich_line.sage  test_berkovich_trees.sage  test_type_V_points.sage  type_V_points.py  type_V_points.py~  valuative_functions.py
mclf/berkovich/old_stuff/: berkovich.sage  berkovich_trees.sage  valuation_tree.sage  valuation_trees_old.sage
mclf/curves/: __init__.py  morphisms_of_smooth_projective_curves.py  picard_curves.py  smooth_projective_curves.py  superelliptic_curves.py
mclf/field_extensions/: approximate_factorizations.py  standard_field_extensions.py  test_field_extensions.py  valuations.py  valued_field_extensions.py
mclf/fields/: embeddings_of_standard_fields.py  factor_polynomial_over_function_field.py  finite_field_extensions.py  gcds_of_polynomials_over_function_fields.py  standard_fields.py  standard_function_fields.py  standard_subfields.py  valued_fields.py
mclf/monkey/: __init__.py  trac_24533.py  trac_25294.py  trac_25360.py  trac_25440.py  trac_25441.py  trac_26066.py  util.py
mclf/padic_extensions/: approximate_characteristic_polynomial.py  approximate_factorizations.py  elements_of_fake_padic_completion.py  elements_of_padic_number_fields.py  fake_padic_completions.py  fake_padic_embeddings.py  fake_padic_extensions.py  padic_embeddings.py  padic_extensions.py  padic_number_fields.py  simple_extensions_of_padic_number_fields.py  slope_factors.py  slope_factors_2.py  weak_padic_galois_extensions.py
mclf/semistable_reduction/: admissible_reduction.py  reduction_trees.py  semistable_model.py  semistable_models.py  superell.py  superp.py  superp.py~  superp_models.py
mclf/semistable_reduction/old_stuff/: papprox.sage  superp.sage
mclf/standard_fields/: factor_polynomial_over_function_field.py  finite_field_extensions.py  standard_fields.py  valued_fields.py
mclf/valuations/: discrete_valuations.py  discrete_valuations_on_function_fields.py  extensions_of_discrete_valuations.py  padic_valuations_on_function_fields.py
