[project]
name = "mclf"
dynamic = ["version"]
authors = [
  {name = "Stefan Wewers"},
  {name = "Julian Rüth"},
]
description = "A Sage toolbox for computing with Models of Curves over Local Fields"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/MCLF/mclf"
Repository = "https://github.com/MCLF/mclf"
Documentation = "https://mclf.readthedocs.io/"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {file = ["version"]}

[tool.setuptools.packages.find]
include = ["mclf*"]

[tool.pixi.workspace]
name = "mclf"
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
mclf = { path = ".", editable = true }

[tool.pixi.dependencies]
sagelib = "*"
ipywidgets = "*"

[tool.pixi.tasks]
doctest = "sage -tp --initial mclf docs"
doctest-long = "sage -tp --long --initial mclf docs"
