[project]
name = "mclf"
dynamic = ["version"]
authors = [
  {name = "Stefan Wewers"},
  {name = "Julian Rüth"},
]
description = "A Sage toolbox for computing with Models of Curves over Local Fields"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/MCLF/mclf"
Repository = "https://github.com/MCLF/mclf"
Documentation = "https://mclf.readthedocs.io/"

[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mclf*"]

[tool.setuptools_scm]

[tool.pixi.workspace]
name = "mclf"
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
mclf = { path = ".", editable = true }
readthedocs-build = "*"

[tool.pixi.dependencies]
sagelib = "*"
ipywidgets = "*"

[tool.pixi.tasks]
doctest = "sage -tp --initial mclf docs"
doctest-long = "sage -tp --long --initial mclf docs"
readthedocs = """
bash -lc '
mkdir -p docs/_static
rtd-build 2>&1 | tee /tmp/rtd.log
! grep WARNING /tmp/rtd.log
test "$(du -s _readthedocs_build/mclf/html | cut -f1)" -gt 1000
'
"""
