[project]
name = "mclf"
dynamic = ["version"]
authors = [
  {name = "Stefan Wewers"},
  {name = "Julian Rüth"},
]
description = "A Sage toolbox for computing with Models of Curves over Local Fields"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/MCLF/mclf"
Repository = "https://github.com/MCLF/mclf"
Documentation = "https://mclf.readthedocs.io/"

[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mclf*"]

[tool.setuptools_scm]

[tool.pixi.workspace]
name = "mclf"
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.environments]
sagemath-100 = ["sagemath-100"]
sagemath-101 = ["sagemath-101"]
sagemath-102 = ["sagemath-102"]
sagemath-103 = ["sagemath-103"]
sagemath-104 = ["sagemath-104"]
sagemath-105 = ["sagemath-105"]
sagemath-106 = ["sagemath-106"]
sagemath-107 = ["sagemath-107"]

[tool.pixi.pypi-dependencies]
mclf = { path = ".", editable = true }
readthedocs-build = "*"

[tool.pixi.dependencies]
sagelib = "*"
ipywidgets = "*"
conway-polynomials = ">=0.10,<0.11"

[tool.pixi.tasks]
doctest = "sage -tp --initial mclf docs"
doctest-long = "sage -tp --long --initial mclf docs"
readthedocs = """
bash -lc '
mkdir -p docs/_static
rtd-build 2>&1 | tee /tmp/rtd.log
! grep WARNING /tmp/rtd.log
test "$(du -s _readthedocs_build/mclf/html | cut -f1)" -gt 1000
'
"""

[tool.pixi.feature.sagemath-100.dependencies]
sagelib = "10.0.*"
python = "~=3.10.0"

[tool.pixi.feature.sagemath-100]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.feature.sagemath-101.dependencies]
sagelib = "10.1.*"
python = "~=3.10.0"

[tool.pixi.feature.sagemath-101]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.feature.sagemath-102.dependencies]
sagelib = "10.2.*"
python = "~=3.11.0"

[tool.pixi.feature.sagemath-102]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.feature.sagemath-103.dependencies]
sagelib = "10.3.*"
python = "~=3.11.0"

[tool.pixi.feature.sagemath-103]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.feature.sagemath-104.dependencies]
sagelib = "10.4.*"
python = "~=3.12.0"

[tool.pixi.feature.sagemath-104]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.feature.sagemath-105.dependencies]
sagelib = "10.5.*"
python = "~=3.12.0"

[tool.pixi.feature.sagemath-105]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.feature.sagemath-106.dependencies]
sagelib = "10.6.*"
python = "~=3.12.0"

[tool.pixi.feature.sagemath-106]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.feature.sagemath-107.dependencies]
sagelib = "10.7.*"
python = "~=3.12.0"
